# visual-eval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/edit/: models.yaml  prompt_taxonomy.yaml  settings.yaml
config/t2i/: models.yaml  settings.yaml
dashboard/: app.py
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  TEST_SPEC.md  architecture.md  monday-run.md
docs/samples/: judgment_sample.jsonl  leaderboard_sample.csv
outputs/edit/judgments/: bria_edit.jsonl  flux2_flex.jsonl  flux_kontext.jsonl  picsart.jsonl
outputs/edit/metadata/: edit_log.jsonl  failures.jsonl
outputs/edit/scores/: failure_analysis.csv  filter_rates.csv  (+5 more)
outputs/validation/: VALIDATION_REPORT.md
prompts/edit/: BENCHMARK_PROMPT_DESIGN_RESEARCH.md  layer1_gold.json  layer2_proprietary.json
prompts/t2i/: geneval2_sample.json  layer2_proprietary.json  layer3_adv_occlusion.json  layer3_adversarial.json  layer3_hard.json  layer3_hard_v2.json  prompt_set.json  prompt_themes.json  r2i_bench_sample.json  spatialgeneval_sample.json  theme_taxonomy.json
scripts/edit/: analyze_images_for_prompts.py  discover_s3_images.py  download_source_images.py  generate_prompts.py  pick_diverse_images.py  run_aggregate.py  run_edit.py  run_judge.py  run_report.py  validate_prompt_difficulty.py
scripts/t2i/: generate_design_report.py  generate_layer2_starter.py  generate_prompt_themes.py  run_aggregate.py  run_generation.py  run_hitl.py  run_judge.py  run_prompt_set.py  run_r2i_eval.py  run_report.py
src/: __init__.py  cli.py
src/core/: __init__.py  bootstrap.py  scoring.py  utils.py
src/edit/: __init__.py  aggregator.py  judge.py  prompt_loader.py
src/t2i/: __init__.py  aggregator.py  hitl.py  hitl_webui.py  judge.py  prompt_loader.py  report.py
tests/test_core/: test_bootstrap.py  test_scoring.py  test_utils.py
tests/test_edit/: test_aggregator.py  test_generators.py  test_judge.py
tests/test_t2i/: test_aggregator.py  test_generator_http.py  test_generators.py  test_judge.py  test_judge_http.py  test_prompt_loader.py
(+45 files in other folders)
